--- a/index.html
+++ b/index.html
@@ -1,13 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
-	<div id="wrapper">
-		<div class="content"></div>
-	</div>
-	
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<div id="wrapper">
+			<header>
+				<section class="hello">
+					<div class="hello-header">
+						<img src="img/aion-logo.png" alt="aion">
+						<nav class="hello-header-nav">
+							<img src="img/burger.png" alt="burger">
+						</nav>
+					</div>
+					<div class="hello-main">
+						<h1>Hello</h1>
+						<h2>We are creative agency</h2>
+					</div>
+					<div class="hello-footer">
+						<span>About us</span>
+						<img src="img/x.png" alt="x">
+					</div>
+				</section>
+			</header>
+			<main>
+				<section class="about-us">
+					<div class="about-us-top">
+						<p>la pariatur. Excepteur sint occaecat cupidatat non proident, 
+							sunt in culpa qui officia deserunt mollit 
+							anim id est laborum. Sed ut perspiciatis unde omnis 
+							iste natus error sit voluptatem accusantium doloremque 
+							laudantium, totam rem aperiam, eaque ipsa quae ab illo 
+							inventore veritatis et quasi architecto beatae vitae 
+							dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
+							voluptas sit</p>
+						<a href="#" class="btn">Read more</a>
+					</div>
+					<div class="about-us-bottom">
+						<figure class="figure">
+							<div class="figure-circle"></div>
+							<figcaption>
+								mnesarchum constituam LOREM IPSUM
+							</figcaption>
+						</figure>
+						<figure>
+							<div class="figure-circle"></div>
+							<figcaption>
+								prompta tincidunt  LOREM IPSUM
+							</figcaption>
+						</figure>
+						<figure>
+							<div class="figure-circle"></div>
+							<figcaption>
+								ancillae reformidans LOREM IPSUM
+							</figcaption>
+						</figure>
+					</div>
+				</section>
+				<section class="recent-projects">
+					<h3>Recent projects</h3>
+					<p>about-us</p>
+					<img src="img/recent-projects.jpg" alt="recent-projects">
+				</section>
+				<section class="additional-info">
+					<h3>minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</h3>
+					<article>
+						<div class="additional-info-article">
+							<span>About us</span>
+							<img src="img/x.png" alt="x">
+							<p>
+								la pariatur. Excepteur sint occaecat cupidatat non proident, 
+								sunt in culpa qui officia deserunt mollit anim id est laborum. 
+								Sed ut perspiciatis unde omnis iste natus error sit
+							</p>
+							<a href="#" class="btn">Read more</a>
+						</div>
+					</article>
+					<article>
+						<div class="additional-info-article">
+							<span>About us</span>
+							<img src="img/x.png" alt="x">
+							<p>
+								la pariatur. Excepteur sint occaecat cupidatat non proident, 
+								sunt in culpa qui officia deserunt mollit anim id est laborum. 
+								Sed ut perspiciatis unde omnis iste natus error sit 
+							</p>
+							<a href="#" class="btn">Read more</a>
+						</div>
+					</article>
+					<div class="additional-info-clients">
+						<h3>Our clients</h3>
+						<div class="additional-info-clients-companies">
+							<img src="img/companies/microsoft-logo.png" alt="microsoft">
+							<img src="img/companies/samsung-logo.png" alt="samsung">
+							<img src="img/companies/ibm-logo.png" alt="ibm">
+							<img src="img/companies/google-logo.png" alt="google">
+						</div>
+					</div>
+				</section>
+				<section class="our-team">
+					<h3>Our team</h3>
+					<p>
+						eritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+						Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
+					</p>
+					<div class="our-team-workers">
+						<figure>
+							<div class="figure-circle"></div>
+							<figcaption>
+								<h4>John dean</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+									sed do eiusmod tempor incididunt ut labore et
+								</p>
+							</figcaption>
+							<div class="figure-social">
+								<img src="img/social/facebook-social.png" alt="facebook">
+								<img src="img/social/twitter-social.png" alt="twitter">
+								<img src="img/social/google-social.png" alt="google+">
+							</div>
+						</figure>
+						<figure>
+							<div class="figure-circle"></div>
+							<figcaption>
+								<h4>Rebecca russo</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+									sed do eiusmod tempor incididunt ut labore et
+								</p>
+							</figcaption>
+							<div class="figure-social">
+								<img src="img/social/facebook-social.png" alt="facebook">
+								<img src="img/social/twitter-social.png" alt="twitter">
+								<img src="img/social/google-social.png" alt="google+">
+							</div>
+						</figure>
+						<figure>
+							<div class="figure-circle"></div>
+							<figcaption>
+								<h4>Peter smith</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+									sed do eiusmod tempor incididunt ut labore et
+								</p>
+							</figcaption>
+							<div class="figure-social">
+								<img src="img/social/facebook-social.png" alt="facebook">
+								<img src="img/social/twitter-social.png" alt="twitter">
+								<img src="img/social/google-social.png" alt="google+">
+							</div>
+						</figure>
+					</div>
+				</section>
+			</main>
+			<footer>
+				<img src="img/aion-logo.png" alt="aion">
+				<nav class="footer-nav">
+					<ul>
+						<li><a href="#"></a>Home</li>
+						<li><a href="#"></a>Services</li>
+						<li><a href="#"></a>Our works</li>
+						<li><a href="#"></a>Contact</li>
+					</ul>
+				</nav>
+			</footer>
+		</div>
+	</body>
 </html>
