--- a/index.html
+++ b/index.html
@@ -2,62 +2,59 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Document</title>
+		<title>Aion</title>
 
+		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700" rel="stylesheet">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div id="wrapper">
 			<header>
 				<section class="hello">
-					<div class="hello-header">
+					<div class="hello-header clearfix">
 						<img src="img/aion-logo.png" alt="aion">
 						<nav class="hello-header-nav">
 							<img src="img/burger.png" alt="burger">
 						</nav>
 					</div>
 					<div class="hello-main">
-						<h1>Hello</h1>
+						<span>Hello!</span>
 						<h2>We are creative agency</h2>
 					</div>
-					<div class="hello-footer">
-						<span>About us</span>
-						<img src="img/x.png" alt="x">
-					</div>
+
 				</section>
 			</header>
 			<main>
 				<section class="about-us">
 					<div class="about-us-top">
+						<span>About us</span>
+						<img src="img/x.png" alt="x">
 						<p>la pariatur. Excepteur sint occaecat cupidatat non proident, 
-							sunt in culpa qui officia deserunt mollit 
-							anim id est laborum. Sed ut perspiciatis unde omnis 
-							iste natus error sit voluptatem accusantium doloremque 
-							laudantium, totam rem aperiam, eaque ipsa quae ab illo 
-							inventore veritatis et quasi architecto beatae vitae 
-							dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
-							voluptas sit</p>
+								sunt in culpa qui officia deserunt mollit 
+								anim id est laborum. Sed ut perspiciatis unde omnis 
+								iste natus error sit voluptatem accusantium doloremque 
+								laudantium, totam rem aperiam, eaque ipsa quae ab illo 
+								inventore veritatis et quasi architecto beatae vitae 
+								dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
+								voluptas sit</p>
 						<a href="#" class="btn">Read more</a>
 					</div>
 					<div class="about-us-bottom">
-						<figure class="figure">
-							<div class="figure-circle"></div>
-							<figcaption>
-								mnesarchum constituam LOREM IPSUM
-							</figcaption>
-						</figure>
-						<figure>
-							<div class="figure-circle"></div>
-							<figcaption>
-								prompta tincidunt  LOREM IPSUM
-							</figcaption>
-						</figure>
-						<figure>
-							<div class="figure-circle"></div>
-							<figcaption>
-								ancillae reformidans LOREM IPSUM
-							</figcaption>
-						</figure>
+						<ul class="about-us-bottom-slider">
+							<li class="about-us-bottom-slider-item">
+								<div class="image"></div>
+								<span>mnesarchum constituam<br>LOREM IPSUM</span>
+							</li>
+							<li class="about-us-bottom-slider-item">
+								<div class="image"></div>
+								<span>prompta tincidunt<br>LOREM IPSUM</span>
+							</li>
+							<li class="about-us-bottom-slider-item">
+								<div class="image"></div>
+								<span>ancillae reformidans<br>LOREM IPSUM</span>
+							</li>
+						</ul>
 					</div>
 				</section>
 				<section class="recent-projects">
@@ -69,24 +66,34 @@
 					<h3>minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</h3>
 					<article>
 						<div class="additional-info-article">
-							<span>About us</span>
+							<span>Quodsi fabulas</span>
 							<img src="img/x.png" alt="x">
 							<p>
 								la pariatur. Excepteur sint occaecat cupidatat non proident, 
-								sunt in culpa qui officia deserunt mollit anim id est laborum. 
-								Sed ut perspiciatis unde omnis iste natus error sit
+								sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis 
+								unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
+								eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+								Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui 
+								ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
+								sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
 							</p>
 							<a href="#" class="btn">Read more</a>
 						</div>
 					</article>
 					<article>
 						<div class="additional-info-article">
-							<span>About us</span>
+							<span>Habemus fuisset</span>
 							<img src="img/x.png" alt="x">
 							<p>
 								la pariatur. Excepteur sint occaecat cupidatat non proident, 
 								sunt in culpa qui officia deserunt mollit anim id est laborum. 
-								Sed ut perspiciatis unde omnis iste natus error sit 
+								Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
+								accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae 
+								ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+								Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
+								consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, 
+								qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi 
+								tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
 							</p>
 							<a href="#" class="btn">Read more</a>
 						</div>
