all sections were added

--- a/index.html
+++ b/index.html
@@ -59,120 +59,112 @@
 				</section>
 				<section class="recent-projects">
 					<h3>Recent projects</h3>
-					<p>about-us</p>
+					<p>eritatis et quasi architecto beatae vitae dicta sunt explicabo.
+						Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia</p>
 					<img src="img/recent-projects.jpg" alt="recent-projects">
 				</section>
 				<section class="additional-info">
 					<h3>minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</h3>
-					<article>
-						<div class="additional-info-article">
-							<span>Quodsi fabulas</span>
-							<img src="img/x.png" alt="x">
-							<p>
-								la pariatur. Excepteur sint occaecat cupidatat non proident, 
-								sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis 
-								unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-								eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-								Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui 
-								ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
-								sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-							</p>
-							<a href="#" class="btn">Read more</a>
-						</div>
-					</article>
-					<article>
-						<div class="additional-info-article">
-							<span>Habemus fuisset</span>
-							<img src="img/x.png" alt="x">
-							<p>
-								la pariatur. Excepteur sint occaecat cupidatat non proident, 
-								sunt in culpa qui officia deserunt mollit anim id est laborum. 
-								Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
-								accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae 
-								ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-								Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
-								consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, 
-								qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi 
-								tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
-							</p>
-							<a href="#" class="btn">Read more</a>
-						</div>
-					</article>
-					<div class="additional-info-clients">
+					<div class="flex-container">
+							<div class="additional-info-article">
+								<span>Quodsi fabulas</span>
+								<img src="img/x.png" alt="x">
+								<p>
+										la pariatur. Excepteur sint occaecat cupidatat non 
+										proident, sunt in culpa qui officia deserunt mollit 
+										anim id est laborum. Sed ut perspiciatis unde omnis 
+										
+								</p>
+								<a href="#" class="btn">Read more</a>
+							</div>
+							<div class="additional-info-article">
+								<span>Habemus fuisset</span>
+								<img src="img/x.png" alt="x">
+								<p>
+										la pariatur. Excepteur sint occaecat cupidatat non 
+										proident, sunt in culpa qui officia deserunt mollit 
+										anim id est laborum. Sed ut perspiciatis unde omnis 
+										
+								</p>
+								<a href="#" class="btn">Read more</a>
+							</div>
+					</div>
+				</section>
+				<section class="our-clients">
 						<h3>Our clients</h3>
-						<div class="additional-info-clients-companies">
+						<div class="our-clients-companies">
 							<img src="img/companies/microsoft-logo.png" alt="microsoft">
 							<img src="img/companies/samsung-logo.png" alt="samsung">
 							<img src="img/companies/ibm-logo.png" alt="ibm">
 							<img src="img/companies/google-logo.png" alt="google">
 						</div>
-					</div>
 				</section>
 				<section class="our-team">
 					<h3>Our team</h3>
 					<p>
 						eritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-						Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
+						Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
 					</p>
 					<div class="our-team-workers">
-						<figure>
-							<div class="figure-circle"></div>
-							<figcaption>
-								<h4>John dean</h4>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-									sed do eiusmod tempor incididunt ut labore et
-								</p>
-							</figcaption>
-							<div class="figure-social">
-								<img src="img/social/facebook-social.png" alt="facebook">
-								<img src="img/social/twitter-social.png" alt="twitter">
-								<img src="img/social/google-social.png" alt="google+">
-							</div>
-						</figure>
-						<figure>
-							<div class="figure-circle"></div>
-							<figcaption>
-								<h4>Rebecca russo</h4>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-									sed do eiusmod tempor incididunt ut labore et
-								</p>
-							</figcaption>
-							<div class="figure-social">
-								<img src="img/social/facebook-social.png" alt="facebook">
-								<img src="img/social/twitter-social.png" alt="twitter">
-								<img src="img/social/google-social.png" alt="google+">
-							</div>
-						</figure>
-						<figure>
-							<div class="figure-circle"></div>
-							<figcaption>
-								<h4>Peter smith</h4>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-									sed do eiusmod tempor incididunt ut labore et
-								</p>
-							</figcaption>
-							<div class="figure-social">
-								<img src="img/social/facebook-social.png" alt="facebook">
-								<img src="img/social/twitter-social.png" alt="twitter">
-								<img src="img/social/google-social.png" alt="google+">
-							</div>
-						</figure>
+							<ul class="our-team-slider">
+									<li class="our-team-slider-item">
+										<div class="image"></div>
+										<span>John dean</span>
+										<p>
+											Lorem ipsum dolor sit amet, 
+											consectetur adipisicing elit, sed do eiusmod 
+											tempor
+										</p>
+										<div class="item-social">
+											<img src="img/social/facebook-social.png" alt="facebook">
+											<img src="img/social/twitter-social.png" alt="twitter">
+											<img src="img/social/google-social.png" alt="google+">
+										</div>
+									</li>
+									<li class="our-team-slider-item">
+										<div class="image"></div>
+										<span>rebbeca russo</span>
+										<p>
+											Lorem ipsum dolor sit amet, 
+											consectetur adipisicing elit, sed do eiusmod 
+											tempor
+										</p>
+										<div class="item-social">
+											<img src="img/social/facebook-social.png" alt="facebook">
+											<img src="img/social/twitter-social.png" alt="twitter">
+											<img src="img/social/google-social.png" alt="google+">
+										</div>
+									</li>
+									<li class="our-team-slider-item">
+										<div class="image"></div>
+										<span>peter smith</span>
+										<p>
+											Lorem ipsum dolor sit amet, 
+											consectetur adipisicing elit, sed do eiusmod 
+											tempor
+										</p>
+										<div class="item-social">
+											<img src="img/social/facebook-social.png" alt="facebook">
+											<img src="img/social/twitter-social.png" alt="twitter">
+											<img src="img/social/google-social.png" alt="google+">
+										</div>
+									</li>
+							</ul>
 					</div>
 				</section>
 			</main>
 			<footer>
-				<img src="img/aion-logo.png" alt="aion">
-				<nav class="footer-nav">
-					<ul>
-						<li><a href="#"></a>Home</li>
-						<li><a href="#"></a>Services</li>
-						<li><a href="#"></a>Our works</li>
-						<li><a href="#"></a>Contact</li>
-					</ul>
-				</nav>
+				<div class="footer">
+					<img src="img/aion-logo.png" alt="aion">
+					<nav class="footer-nav">
+						<ul class="footer-nav-menu">
+							<li class="footer-nav-menu-item"><a href="#">Home</a></li>
+							<li class="footer-nav-menu-item"><a href="#">Services</a></li>
+							<li class="footer-nav-menu-item"><a href="#">Our works</a></li>
+							<li class="footer-nav-menu-item"><a href="#">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</footer>
 		</div>
 	</body>
