--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 						<div class="hello-header">
 							<div class="hello-header-logo">
 								<img src="img/aion-logo.png" alt="aion">
+								<h1 class="hello-header-logo-h1">Aion</h1>
 							</div>
-							<nav class="hello-header-nav">
-								<img src="img/burger.png" alt="burger">
-							</nav>
+							<nav class="hello-header-nav">Menu</nav>
 						</div>
 						<div class="hello-main">
 							<span>Hello!</span>
